# pydantic-gen

./: .gitignore  README.md  README.rst  example_output.py  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  example_output.rst  index.rst  pydantic_gen.rst  tests.rst
docs/source/: conf.py  pydantic_gen.rst
pydantic_gen/: __init__.py  err.py  main.py  templates.yml
tests/: conftest.py  example.yml  example_output.py  test_pydantic_schemagen.py
