[tool.poetry]
name = "pydantic-schemagen"
version = "0.1.0"
description = ""
authors = ["Mikhail Beliansky <mb@blaster.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
jinja2 = "^2.11.2"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
